# dictation

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: appimage.yml  ci.yml  release.yml
dictation/: __init__.py  cli.py  config.py  core.py  hotkey.py  ipc.py  models.py  notifications.py  recorder.py  settings_window.py  tray.py
dictux/: __init__.py  cli.py  config.py  core.py  download.py  history.py  hotkey.py  indicator.py  ipc.py  main_window.py  models.py  onboarding.py  output.py  recorder.py  settings_window.py  transcriber.py  tray.py
packaging/: build-appimage.sh  dictation.desktop  dictux.desktop  install.sh
packaging/appimage/: README.md  dictux.desktop  entrypoint.sh
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_download.py  test_history.py  test_hotkey.py  test_indicator.py  test_ipc.py  test_main_window.py  test_models.py  test_onboarding.py  test_output.py  test_recorder.py  test_transcriber.py
